# agent_vm_bench

./: .gitignore  .pre-commit-config.yaml  920x_ddr_latency_simple.py  920x_ddr_latency_v1.1.py  920x_ddr_latency_v1.2.py  920x_ddr_latency_v1.3.py  CHANGELOG.md  CLAUDE.md  README.md  README_zh.md  auto_vm_test.py  batch_config.yaml  batch_test_scheduler.py  create_server.py  download_page.sh  findings.md  fix_ipc_offline.py  fix_l3_hit_rate.py  getfre_config.yaml  metrics.py  progress.md  pyproject.toml  pytest.ini  qemu_monitor.py  requirements.txt  smap_bw.py  stress_tool.cpp  task_plan.md  test_config_template.yaml  version.py  vm_bench_lite.py  vm_monitor.py
.github/workflows/: ci.yml
config/: batch_config.yaml  docker_bench.yaml  e2b_batch_matrix.yaml  e2b_batch_template.yaml  e2b_bench.yaml  getfre_config.yaml  test_config_template.yaml  vm_bench.yaml
docker_bench/: __init__.py  __main__.py  bench.py  config.py  container_manager.py  delete_containers.sh  requirements.txt  schemas.py  stats_collector.py  task_runner.py  utils.py
docker_bench/tests/: __init__.py  test_config.py  test_schemas.py  test_utils.py
dockerfile_build/: Dockerfile  Dockerfile.x86  README.md  build_e2b.py  llama_openclaw.conf  openclaw.json  push_to_harbor.sh
docs/: design-en.md  design.md  docker-bench-usage-zh.md  docker-bench-usage.md  e2b-batch-usage-en.md  e2b-batch-usage.md  e2b-bench-usage-zh.md  e2b-bench-usage.md  e2b-llm-bench-usage.md  metrics-reference.md  release-notes-v0.1.0-alpha.md  usage-guide.md  vm_bench-usage-guide-zh.md  vm_bench-usage-guide.md
docs/superpowers/plans/: 2024-07-13-v0.2.0-deprecation.md  2026-06-15-qemu-monitor-refactor.md  2026-06-16-e2b-sandbox-bench.md  2026-06-16-vm-bench-lite-refactor.md  2026-06-21-vm-monitor-refactor.md  2026-06-27-e2b-batch-automated-test-plan.md  2026-07-01-sandbox-ids-file-feature.md  2026-07-17-round-robin.md  2026-07-23-swapcache-numa-memory-monitoring.md
docs/superpowers/specs/: 2024-07-13-v0.2.0-deprecation-design.md  2026-06-02-multi-vm-automation-design-en.md  2026-06-02-multi-vm-automation-design.md  2026-06-15-qemu-monitor-refactor-design.md  2026-06-16-e2b-sandbox-bench-design.md  2026-06-16-vm-bench-lite-refactor-design.md  2026-06-21-vm-monitor-refactor-design.md  2026-06-27-e2b-batch-automated-test-design.md  2026-07-01-sandbox-ids-file-feature-design.md  2026-07-17-round-robin-design.md  2026-07-17-warmup-wave-design.md  2026-07-23-swapcache-numa-memory-monitoring-design.md
e2b_bench/: __init__.py  __main__.py  batch_scheduler.py  bench.py  config.py  delete_sandbox.sh  llm_runner.py  metrics_extractor.py  report_aggregator.py  requirements.txt  round_robin.py  sandbox_manager.py  scenario_loader.py  schemas.py  stats_collector.py  task_generator.py  task_runner.py  utils.py
e2b_bench/scripts/: .env.example  README.md  debug_demo.py  delete_sandbox.sh  e2b_template_manager.py
e2b_bench/tests/: __init__.py  test_config.py  test_llm_bench.py  test_metrics_extractor.py  test_round_robin.py  test_sandbox_manager.py  test_schemas.py  test_stats_collector.py  test_task_generator.py  test_utils.py  test_warmup_wave_multi.yaml
e2b_bench/tests/config/: test_warmup_wave_multi.yaml  test_warmup_wave_single.yaml
fix_scripts/: fix_ipc_offline.py  fix_l3_hit_rate.py
llm_replay/: README.md  __init__.py  __main__.py  config.py  models.py  parser.py  prebuilt.py  server.py  stats.py
llm_replay/config/: llm_replay.yaml  scenarios.yaml
llm_replay/scripts/: test_llm_replay_client.py
llm_replay/sessions/: README.md  browser-session-3.jsonl  test-session.jsonl
llm_replay/tests/: __init__.py  test_llm_replay.py
qemu_monitor/: __init__.py  cli.py  config.py  exporters.py  log_capture.py  monitor.py  parsers.py
session-replay/: session-replay.py
tests/config/: test_warmup_wave_single.yaml
vm_bench/: __init__.py  __main__.py  bench.py  config.py  constants.py  health_checker.py  requirements.txt  schemas.py  stats_collector.py  task_runner.py  utils.py  vm_manager.py
vm_bench/tests/: requirements.txt  test_bench.py  test_config.py  test_schemas.py  test_stats_collector.py  test_task_runner.py  test_utils.py  test_vm_manager.py
vm_bench_lite/: __init__.py  cli.py  config.py  connection.py  coordinator.py  models.py  runner.py
vm_bench_lite/monitoring/: __init__.py  batch.py  health.py  openstack.py  stats.py
vm_bench_lite/tasks/: __init__.py  browser.py  qa.py  stress.py
vm_monitor/: __init__.py  base.py  cli.py  config.py  exporters.py  firecracker.py  log_capture.py  parsers.py  qemu.py
vm_monitor/tests/: test_numa_memory.py  test_swap_stats.py
