[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-vm-bench"
version = "0.3.0"
description = "Performance testing framework for virtualization scenarios"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Agent VM Bench Team"}
]
keywords = ["benchmark", "virtualization", "performance", "e2b", "openstack", "docker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "psutil>=5.8.0",
    "paramiko>=2.7.0",
    "flask>=2.0.0",
    "PyYAML>=6.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "xlsxwriter>=3.0.0",
    "python-dotenv>=0.19.0",
    "e2b>=0.15.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
vm-monitor = "vm_monitor.cli:main"
vm-bench-lite = "vm_bench_lite:main"
auto-vm-test = "auto_vm_test:main"
batch-test-scheduler = "batch_test_scheduler:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vm_monitor*", "vm_bench*", "e2b_bench*", "docker_bench*", "qemu_monitor*", "llm_replay*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
testpaths = [
    "e2b_bench/tests",
    "vm_bench/tests",
    "docker_bench/tests",
    "llm_replay/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services",
    "unit: marks fast unit tests",
]

[tool.coverage.run]
source = ["vm_monitor", "vm_bench", "e2b_bench", "docker_bench", "llm_replay"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
    "ARG001", # unused function argument (common in callbacks)
    "ARG002", # unused method argument
    "SIM108", # use ternary operator
    "SIM115", # use context manager for opening files (intentional in some places)
    "SIM105", # use contextlib.suppress (intentional try-except-pass)
    "SIM118", # use key in dict instead of dict.keys()
    "B007",   # loop control variable not used
    "C401",   # unnecessary generator
    "C416",   # unnecessary dict comprehension
    "C408",   # unnecessary dict() call
    "UP022",  # prefer capture_output
    "UP015",  # unnecessary mode argument
    "UP009",  # UTF-8 encoding declaration
    "UP024",  # replace aliased errors
    "E722",   # bare except
    "E712",   # equality comparisons to True/False
    "E741",   # ambiguous variable name
    "E701",   # multiple statements on one line (colon)
    "E702",   # multiple statements on one line (semicolon)
    "F401",   # unused import (handled in per-file-ignores)
    "F403",   # star imports
    "F541",   # f-string without placeholders
    "F821",   # undefined name
    "F841",   # local variable assigned but never used
    "ARG004", # unused static method argument
    "ARG005", # unused lambda argument
    "E402",   # module level import not at top
    "W291",   # trailing whitespace
    "W292",   # no newline at end of file
    "W293",   # blank line contains whitespace
    "I001",   # import block unsorted
    "SIM102", # use single if statement
    "SIM114", # combine if branches
]

[tool.ruff.lint.isort]
known-first-party = ["vm_monitor", "vm_bench", "e2b_bench", "docker_bench", "qemu_monitor", "llm_replay"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
